fixing overflow error

--- a/css/global.css
+++ b/css/global.css
@@ -4,6 +4,7 @@ body {
   font-family: "Rubik", sans-serif;
   color: #f5f5f7;
   background: #000;
+  overflow-x: hidden;
 }
 button {
   font-family: "Rubik", sans-serif;
